Feat: RestaurantService 수정 및 테스트 수정